# Aarohan-Temp

./: .gitignore  API_DOCUMENTATION.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  build.ps1  build.sh  docker-compose.yml  mock_trading_engine.py  run_tests.ps1  start.ps1  start.sh  stop.ps1  stop.sh  test_system.ps1  test_system.py
api-server/: CMakeLists.txt  Dockerfile
api-server/include/: api_server.hpp
api-server/src/: api_server.cpp  main.cpp
config/: api.json  data_server.json  engine.json  websocket.json
data-server/: Dockerfile  data_server.py  requirements.txt
database/: init.sql
demo-client/: index.html
trading-engine/: CMakeLists.txt  Dockerfile
trading-engine/include/: balance_service.hpp  error_service.hpp  market_data_service.hpp  matching_engine.hpp  order_service.hpp  orderbook.hpp  redis_client.hpp  snapshot_service.hpp  trading_engine.hpp  types.hpp
trading-engine/src/: balance_service.cpp  error_service.cpp  main.cpp  market_data_service.cpp  matching_engine.cpp  order_service.cpp  orderbook.cpp  redis_client.cpp  snapshot_service.cpp  trading_engine.cpp
websocket-server/: Dockerfile  requirements.txt  websocket_server.py
